# hermes-cursor-provider

./: .gitignore  ARCHITECTURE_ANALYSIS.md  CONTRIBUTING.md  IMPLEMENTATION.md  README.md  cursor_acp_client.py  install.sh  pyproject.toml
hermes_cursor_provider/: __init__.py
patches/: 001-hermes_cli-providers.patch  002-hermes_cli-auth.patch  003-hermes_cli-runtime_provider.patch  004-agent-agent_runtime_helpers.patch  005-hermes_cli-models.patch  006-agent-conversation_loop.patch  007-agent-agent_init.patch  008-agent-auxiliary_client.patch  009-agent-model_metadata.patch  010-hermes_cli-auth-fix.patch  011-hermes_cli-auth-status.patch  012-hermes_cli-model_switch.patch  013-hermes-webui-config.patch
plugins/model-providers/cursor-acp/: __init__.py  plugin.yaml
