[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-cursor-provider"
version = "0.1.0"
description = "Cursor ACP provider plugin for Hermes Agent"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Roberto Villegas", email = "hola@robertovillegas.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.11"

[project.urls]
Homepage = "https://github.com/RobertoVillegas/hermes-cursor-provider"
Repository = "https://github.com/RobertoVillegas/hermes-cursor-provider"
Documentation = "https://hermes-agent.nousresearch.com/docs/developer-guide/model-provider-plugin"

[project.entry-points."hermes.plugins"]
cursor-acp = "hermes_cursor_provider:register"

[tool.setuptools.packages.find]
where = ["."]
include = ["hermes_cursor_provider*"]

[tool.setuptools.package-data]
hermes_cursor_provider = ["*"]
